# adventofcode-2021

./: README.md  day1.go  go.mod  main.go
go/: day2.go  go.mod  main  main.go
rust/: Cargo.toml
rust/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  main.rs
