[package]
name = "adventofcode-2021"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1"
# CLI parsing
clap = "3.0.0-beta.5"
# Logging
log = "0.4"
env_logger = "0.9"

if_chain = "1"
